@@ -1,8 +1,10 @@
+2009-09-20 Fix usetex spacing errors in pdf backend. - JKS
+
 2009-09-20 Add Sphinx extension to highlight IPython console sessions,
            originally authored (I think) by Michael Droetboom. - FP
 
 2009-09-20 Fix off-by-one error in dviread.Tfm, and additionally protect
-           against exceptions in case a dvi font is missing some metrics - JKS
+           against exceptions in case a dvi font is missing some metrics. - JKS
 
 2009-09-15 Implement draw_text and draw_tex method of backend_base using
            the textpath module. Implement draw_tex method of the svg 
